--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
 asgiref==3.11.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
 Django==6.0
+django-redis==6.0.0
 djangorestframework==3.16.1
+drf-yasg==1.21.7
 gunicorn==23.0.0
+idna==3.11
+inflection==0.5.1
 packaging==25.0
 python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+redis==7.1.0
+requests==2.32.5
 sqlparse==0.5.5
+uritemplate==4.2.0
+urllib3==2.6.2
