--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.11.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
 Django==6.0
+django-ipware==7.0.1
 django-redis==6.0.0
+django-structlog==10.0.0
 djangorestframework==3.16.1
 drf-yasg==1.21.7
 gunicorn==23.0.0
@@ -10,10 +12,13 @@ idna==3.11
 inflection==0.5.1
 packaging==25.0
 python-dotenv==1.2.1
+python-ipware==3.0.0
 pytz==2025.2
 PyYAML==6.0.3
 redis==7.1.0
 requests==2.32.5
+setuptools==80.9.0
 sqlparse==0.5.5
+structlog==25.5.0
 uritemplate==4.2.0
 urllib3==2.6.2
