sample.env updated

--- a/sample.env
+++ b/sample.env
@@ -7,6 +7,8 @@ ALLOWED_HOSTS='*'
 PAGINATION_PAGE_SIZE=10
 
 # Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
 REDIS_URL=redis://localhost:6379/0
 
 # Cache TTLs
@@ -16,6 +18,7 @@ WEATHER_CACHE_TTL_IN_SECONDS=3600
 
 # External APIs
 OPEN_METEO_BASE_URL='https://api.open-meteo.com/v1'
+OPEN_METEO_AIR_QUALITY_BASE_URL='https://air-quality-api.open-meteo.com/v1/'
 DISTRICTS_JSON_URL='https://raw.githubusercontent.com/strativ-dev/technical-screening-test/main/bd-districts.json'
 REQUEST_TIMEOUT_IN_SECONDS=10
 
